--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 <!-- This will be the file that your project's HTML will go in -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title> Sneaker Store </title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td>Sneaker Store</td>
+        </tr>
+        <tr>
+          <td><img src="images/nike.file.jpg" alt=""></td>
+        </tr>
+        <tr>
+          <td><img src="images/jordan.drawio.jpg" alt=""></td>
+        </tr>
+        <tr>
+          <td><img src="images/adidas.file.jpg" alt=""></td>
+        </tr>
+        <tr>
+          <td>Shop Nike</td>
+        </tr>
+        <tr>
+          <td>Shop Jordan</td>
+        </tr>
+        <tr>
+          <td>Shop Adidas</td>
+    </table>
+  </body>
+</html>
